--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta
+			name="description"
+			content="An E-commerce Product Challenge by FrontendMentor.io"
+		/>
 		<title>E-commerce Product Page</title>
 	</head>
 	<body>
